--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,30 @@
-<h1>Are You 21 years or Older?</h1>
+<!-- <div class="hero">
+  <br />
+  <div class="frosty col-10 offset-1 text-ceneter">
+    <h1 align="center">Are You 21 years or Older?</h1>
+  </div>
+</div> -->
+<div class="main-content">
+  <h1 align="center">Welcome</h1>
+  <p>Please enter your date of birth</p>
+    <form class="rude-form">
+      <div class="field-row  " data-dob_format="mm-dd-yyyy">
+        <!-- <input type="number" name="month" placeholder="MM" pattern="[0-9]*" autocomplete="off">
+        <input type="number" name="date" placeholder="DD" pattern="[0-9]*" autocomplete="off"> -->
+        <input type="number" name="year" placeholder="YYYY" pattern="[0-9]*" autocomplete="off">
+        <input type="button" class="rude-button" disabled="" value="OK" data-cmd="/rude-form-submit/">
+      </div>
+      <div class="field-row">
+        "You have to be over "
+        <span class="required-age">21</span>
+          "to enter this site"
+      </div>
+      <div class="field-row-remember">
+        <span class="rude-checkbox">
+          <input type="checkbox" name="rememberme" checked="checked">
+          <span>✓</span>
+        </span>
+          "Remember me"
+      </div>
+    </form>
+</div>
